Fixed some edge cases.
Ensure that annotations are merged in Artemis (if multiple annotations in the same line)